# beacon-app

./: .dockerignore  .env.local.template  .gitignore  Dockerfile  README.md  Tiltfile  biome.json  index.html  knip.config.ts  package.json  tsconfig.json  vite.config.ts
.changeset/: android-16kb-page-alignment.md  config.json  synapse-provider-ux.md
public/: robots.txt  sitemap.xml
src/: index.css  main.tsx  routeTree.gen.ts  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  gateway.rs  lib.rs  main.rs
src/components/: ChatView.tsx  ConversationList.tsx  GatewayConnection.tsx  Layout.tsx  Markdown.tsx  ModelSelector.tsx  Sidebar.tsx  SubscriptionSettings.tsx  ToolCallBlock.tsx  VoiceControls.tsx  index.ts
src/components/layout/: DefaultCatchBoundary.tsx  Layout.tsx  NotFound.tsx  index.ts
src/hooks/: index.ts  useApi.tsx  useBilling.ts  useChat.ts  useConversations.ts  useMemories.ts  usePersonas.ts  useProviders.ts  useSkills.ts  useTheme.ts  useVoice.ts
src/lib/: billing.ts  models.ts  persona.ts  platform.ts
src/lib/api/: graphql.ts  http.ts  index.ts  ipc.ts  memories.ts  types.ts
src/lib/auth/: auth.ts  authCache.ts  cloudFeatures.ts  getAuth.ts  index.ts  signIn.ts  signOut.ts
src/lib/config/: app.config.ts  env.config.ts
src/lib/context/: organization.context.tsx
src/lib/db/: conversations.ts  index.ts
src/lib/flags/: client.ts  index.ts
src/lib/gateway/: client.ts  commands.ts  discovery.ts  index.ts  (+2 more)
src/providers/: EventsProvider.tsx
src/routes/: __root.tsx  _app.tsx  _auth.tsx  _public.tsx
(+22 files in other folders)
