[package]
name = "beacon-app"
version = "0.1.0"
description = "Beacon unified app - voice-first AI assistant"
authors = ["Omni <team@omni.dev>"]
license = "MIT"
repository = "https://github.com/omnidotdev/beacon"
edition = "2021"

[lib]
name = "beacon_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
directories = "6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
